retrieveNA31/objects/Core_IPS_Assigned_Environment_Variables__c.object
<CustomObject>
    <description>The environment details questions associated to either a Product or Subcat. The object also has a reference to the conditional flags to determine display on Case.</description>
    <fields>
        <fullName>Core_Agent_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agent Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Environment_Variable__c</fullName>
        <label>Environmental Detail Question</label>
        <referenceTo>Core_IPS_Environment_Variables__c</referenceTo>
        <relationshipLabel>Environment Details Operational</relationshipLabel>
        <relationshipName>Environment_Detail_Operationals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Supported_Product_Name__c</fullName>
        <formula>Core_Supported_Product__r.Core_Supported_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supported Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Issue_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Subcategory</label>
        <referenceTo>Core_IPS_Product_Issue_Category__c</referenceTo>
        <relationshipLabel>Environment Details Operational</relationshipLabel>
        <relationshipName>Environment_Detail_Operationals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supported Product</label>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipName>Environment_Detail_Operationals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environment Details Operational</label>
    <nameField>
        <displayFormat>AEV-{00000000}</displayFormat>
        <label>Environment Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Details Operational</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>